# csapex_navigation

./: CMakeLists.txt  README.md  package.xml  plugins.xml
.github/workflows/: catkin_make_isolated.yml
include/csapex_navigation/: pid.hpp
src/: approach_pose.cpp  approach_pose_trailer.cpp  backup.cpp  follow_path.cpp  goto.cpp  move_robot.cpp  plan_path.cpp  plan_path_with_map.cpp  register_navigation.cpp  select_closest_pose.cpp  set_lookat_point.cpp  stop_movement.cpp
