<?xml version="1.0"?>
<package format="2">
  <name>csapex_navigation</name>
  <version>0.0.0</version>
  <description>The csapex_navigation package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>csapex_ros</depend>
  <depend>csapex_transform</depend>
  <depend>csapex</depend>
  <depend>roscpp</depend>
  <depend>path_msgs</depend>

  <export>
  <csapex plugin="${prefix}/plugins.xml" />
  </export>
</package>
